fix: removing references to myself

--- a/00.00 - Help/00.00 - Help.md
+++ b/00.00 - Help/00.00 - Help.md
@@ -6,6 +6,13 @@ updated: 2025-01-27T13:07
 This documentation is intended to help create or view notes.
 ## Vault Access
 This vault template can be found at [GitHub](https://github.com/530Digital/management-field-notes). Files are stored locally on your system.
+## Setup
+There are some basic first things I recommend you do before starting. That is to:
+
+- Create a new person with your name.
+	- This is so you can reference yourself in other notes where applicable. For example, in a meeting attendee list.
+- Review the templates and update if you want.
+
 ### Sections
 ```dataview
 LIST FROM "00.00 - Help" SORT number(split(file.name, "\.")[0]) ASC
